feat: upgrade ere-guests to v0.13.0 (#68)
* feat: upgrade ere-guests to v0.13.0

* feat: bump ere-guests to v0.13 and update docker example

* feat: update ProofType, remove ethrex-risc0 and reth-risc0, add ethrex-openvm

* chore: reorder schemas
